// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio defaultChecked 1`] = `
<div
  class="za-radio__wrapper"
>
  <div
    class="za-radio za-radio--checked"
  >
    <span
      class="za-radio__inner"
    />
    <input
      checked=""
      class="za-radio__input"
      type="radio"
      value="0"
    />
  </div>
  <span
    class="za-radio__text"
  >
    选项一
  </span>
</div>
`;

exports[`Radio renders correctly 1`] = `
<div
  class="za-radio__wrapper"
>
  <div
    class="za-radio"
  >
    <span
      class="za-radio__inner"
    />
    <input
      class="za-radio__input"
      type="radio"
      value="0"
    />
  </div>
  <span
    class="za-radio__text"
  >
    选项一
  </span>
</div>
`;

exports[`Radio type is button 1`] = `
<button
  class="za-radio"
  type="button"
>
  <span
    class="za-radio__text"
  >
    选项一
  </span>
  <input
    class="za-radio__input"
    type="radio"
    value="0"
  />
</button>
`;

exports[`Radio type is cell 1`] = `
<div
  class="za-cell za-cell--link"
>
  <div
    class="za-cell__inner"
  >
    <div
      class="za-cell__header"
    />
    <div
      class="za-cell__body"
    >
      <div
        class="za-cell__content"
      >
        <div
          class="za-radio__wrapper"
        >
          <div
            class="za-radio"
          >
            <span
              class="za-radio__inner"
            />
            <input
              class="za-radio__input"
              type="radio"
              value="0"
            />
          </div>
          <span
            class="za-radio__text"
          >
            选项一
          </span>
        </div>
      </div>
    </div>
    <div
      class="za-cell__footer"
    />
  </div>
</div>
`;

exports[`Radio.Group Radio checked 1`] = `
<div
  class="za-radio-group__wrapper"
>
  <div
    class="za-radio-group za-radio-group--radius"
  >
    <div
      class="za-radio__wrapper"
    >
      <div
        class="za-radio"
      >
        <span
          class="za-radio__inner"
        />
        <input
          class="za-radio__input"
          type="radio"
          value="0"
        />
      </div>
      <span
        class="za-radio__text"
      >
        选项一
      </span>
    </div>
    <div
      class="za-radio__wrapper"
    >
      <div
        class="za-radio za-radio--checked"
      >
        <span
          class="za-radio__inner"
        />
        <input
          checked=""
          class="za-radio__input"
          type="radio"
          value="1"
        />
      </div>
      <span
        class="za-radio__text"
      >
        选项二
      </span>
    </div>
    <div
      class="za-radio__wrapper"
    >
      <div
        class="za-radio"
      >
        <span
          class="za-radio__inner"
        />
        <input
          class="za-radio__input"
          type="radio"
          value="2"
        />
      </div>
      <span
        class="za-radio__text"
      >
        选项三
      </span>
    </div>
  </div>
</div>
`;

exports[`Radio.Group defaultValue 1`] = `
<div
  class="za-radio-group__wrapper"
>
  <div
    class="za-radio-group za-radio-group--radius"
  >
    <div
      class="za-radio__wrapper"
    >
      <div
        class="za-radio"
      >
        <span
          class="za-radio__inner"
        />
        <input
          class="za-radio__input"
          type="radio"
          value="0"
        />
      </div>
      <span
        class="za-radio__text"
      >
        选项一
      </span>
    </div>
    <div
      class="za-radio__wrapper"
    >
      <div
        class="za-radio za-radio--checked"
      >
        <span
          class="za-radio__inner"
        />
        <input
          checked=""
          class="za-radio__input"
          type="radio"
          value="1"
        />
      </div>
      <span
        class="za-radio__text"
      >
        选项二
      </span>
    </div>
    <div
      class="za-radio__wrapper"
    >
      <div
        class="za-radio"
      >
        <span
          class="za-radio__inner"
        />
        <input
          class="za-radio__input"
          type="radio"
          value="2"
        />
      </div>
      <span
        class="za-radio__text"
      >
        选项三
      </span>
    </div>
  </div>
</div>
`;

exports[`Radio.Group renders correctly 1`] = `
<div
  class="za-radio-group__wrapper"
>
  <div
    class="za-radio-group za-radio-group--radius"
  >
    <div
      class="za-radio__wrapper"
    >
      <div
        class="za-radio za-radio--checked"
      >
        <span
          class="za-radio__inner"
        />
        <input
          checked=""
          class="za-radio__input"
          type="radio"
          value="0"
        />
      </div>
      <span
        class="za-radio__text"
      >
        选项一
      </span>
    </div>
    <div
      class="za-radio__wrapper"
    >
      <div
        class="za-radio"
      >
        <span
          class="za-radio__inner"
        />
        <input
          class="za-radio__input"
          type="radio"
          value="1"
        />
      </div>
      <span
        class="za-radio__text"
      >
        选项二
      </span>
    </div>
    <div
      class="za-radio__wrapper"
    >
      <div
        class="za-radio"
      >
        <span
          class="za-radio__inner"
        />
        <input
          class="za-radio__input"
          type="radio"
          value="2"
        />
      </div>
      <span
        class="za-radio__text"
      >
        选项三
      </span>
    </div>
  </div>
</div>
`;
